# picobrot

./: CMakeLists.txt  DEV_Config.c  DEV_Config.h  LCD_1in28.c  LCD_1in28.h  LICENSE.TXT  QMI8658.c  config.h  mandelbrot.c
